--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -4,10 +4,8 @@
         width: 100%;
         padding: 0 2%;
     }
-    
     .row { padding: 0 2%; }
 }
-
 
 /* Small tablet to big tablet: from 768px to 1023px */
 @media only screen and (max-width: 1023px) {
@@ -54,7 +52,6 @@
         margin: 0 0 4% 0;
     }
     
-    
     .main-nav { display: none; }
     .mobile-nav-icon {display: inline-block;}
     
@@ -83,8 +80,6 @@
     .sticky .mobile-nav-icon { margin-top: 10px; }
     .sticky .mobile-nav-icon i { color: #555; }
     
-    
-    
     h1 { font-size: 180%; }
     h2 { font-size: 150%; }
     
@@ -106,5 +101,10 @@
     
     .works-step { margin-bottom: 20px; }
     .works-step:last-of-type { margin-bottom: 20px; }
-    
+}
+
+/* Small phones: from 0 to 480px */
+@media only screen and (max-width: 480px) {
+    section { padding: 25px 0; }
+    .contact-form {width: 100%; }
 }
